--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,32 @@
 @font-face {
-    font-family: 'bpmonoregular';
-    src: url('BPmono-webfont.eot');
-    src: url('BPmono-webfont.eot?#iefix') format('embedded-opentype'),
-         url('BPmono-webfont.woff2') format('woff2'),
-         url('BPmono-webfont.woff') format('woff'),
-         url('BPmono-webfont.ttf') format('truetype'),
-         url('BPmono-webfont.svg#bpmonoregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'fantasque_sans_monoregular';
+  src: url('fantasquesansmono-regular-webfont.eot');
+  src: url('fantasquesansmono-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('fantasquesansmono-regular-webfont.woff2') format('woff2'),
+       url('fantasquesansmono-regular-webfont.woff') format('woff'),
+       url('fantasquesansmono-regular-webfont.ttf') format('truetype'),
+       url('fantasquesansmono-regular-webfont.svg#fantasque_sans_monoregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
 }
 
 body {
   background-color: #1e1e2e;
   color: #cdd6f4;
-  font-family: "bpmonoregular", "Courier New", "Lucida Console", "Monaco", monospace;
+  font-family: "fantasque_sans_monoregular", monospace;
   text-align: center;
 }
 
+/*
 a:link, a:visited {
   color: #cdd6f4;
+}
+*/
+
+a {
+  color: #89b4fa;
+  text-decoration: none;
 }
 
 a:hover, a:active {
