--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,34 @@
+/*
+  ## src/style.css
+  ## Copyright 2025 Alexandru Mihai Buzduc
+  #
+  # This work may be distributed and/or modified under the
+  # conditions of the LaTeX Project Public License, either version 1.3c
+  # of this license or (at your option) any later version.
+  # The latest version of this license is in
+  #   http://www.latex-project.org/lppl.txt
+  # and version 1.3 or later is part of all distributions of LaTeX
+  # version 2005/12/01 or later.
+  #
+  # This work has the LPPL maintenance status `maintained'.
+  #
+  # The Current Maintainer of this work is Alexandru Mihai Buzduc.
+  #
+  # This work consists of the files listed in src/lppl-files.txt.
+*/
+
 @font-face {
-  font-family: 'fantasque_sans_monoregular';
-  src: url('fantasquesansmono-regular-webfont.eot');
-  src: url('fantasquesansmono-regular-webfont.eot?#iefix') format('embedded-opentype'),
-       url('fantasquesansmono-regular-webfont.woff2') format('woff2'),
-       url('fantasquesansmono-regular-webfont.woff') format('woff'),
-       url('fantasquesansmono-regular-webfont.ttf') format('truetype'),
-       url('fantasquesansmono-regular-webfont.svg#fantasque_sans_monoregular') format('svg');
+  font-family: "fantasque_sans_monoregular";
+  src: url("fantasquesansmono-regular-webfont.eot");
+  src: url("fantasquesansmono-regular-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("fantasquesansmono-regular-webfont.woff2") format("woff2"),
+    url("fantasquesansmono-regular-webfont.woff") format("woff"),
+    url("fantasquesansmono-regular-webfont.ttf") format("truetype"),
+    url("fantasquesansmono-regular-webfont.svg#fantasque_sans_monoregular")
+      format("svg");
   font-weight: normal;
   font-style: normal;
-
 }
 
 body {
@@ -29,7 +49,8 @@ a {
   text-decoration: none;
 }
 
-a:hover, a:active {
+a:hover,
+a:active {
   color: #94e2d5;
 }
 
@@ -54,5 +75,5 @@ small.caption {
 textarea {
   background-color: #313244;
   color: #cdd6f4;
-  border: 0
+  border: 0;
 }
